<resources>
    <string name="app_name">Primary</string>

    <string name="compose_activity_title">Compose</string>
    <string name="senderTextView">Coursera</string>

    <string name="dateTextView">5:07 PM</string>
    <string name="subjectTextView">Recommended Courses For You</string>
    <string name="messageTextView">Most Popular &amp; Starting Soon!...Ready...</string>

    <string name="first_menu_item">Add from Contacts</string>
    <string name="second_menu_item">Save Draft</string>
    <string name="third_menu_item">Discard</string>
    <string name="fourth_menu_item">Settings</string>
    <string name="fifth_menu_item">Help &amp; feedback</string>
    <string name="inbox_string">Inbox</string>
    <string name="starred_string">Starred</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="all_mail_string"> Primary</string>
    <string name="trash_string">Trash</string>
    <string name="spam_string">Spams</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_compose">Compose</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
<string name="Subject">Subject</string>
    <string name="Compose_email">Compose email</string>
</resources>