<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/first_menu_item"
        android:id="@+id/first_menu_item"/>

    <item
        android:title="@string/second_menu_item"
        android:id="@+id/second_menu_item"/>

    <item
        android:title="@string/third_menu_item"
        android:id="@+id/third_menu_item"/>

    <item
        android:title="@string/fourth_menu_item"
        android:id="@+id/fourth_menu_item"/>
    <item
        android:title="@string/fifth_menu_item"
        android:id="@+id/fifth_menu_item"/>
    <item
        android:id="@+id/send"
        android:title="Send"
        android:icon="@drawable/attach"
        app:showAsAction="always"/>

    <item android:id="@+id/attach"
     android:title="Attach"
        android:icon="@drawable/send"
        app:showAsAction="always"/>
</menu>